--- a/index.html
+++ b/index.html
@@ -5,28 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon" />
-    <title>Eternal Captures Studio | Home</title>
+    <title>CRM | Home</title>
     <link
       rel="stylesheet"
       href="https://cdn.usebootstrap.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
   </head>
   <body>
-    <div
-      class="banner d-flex align-items-center justify-content-start vh-100 text-white"
-    >
-      <div class="banner-content">
-        <h1 class="mb-4 display-3 font-weight-bold">Shoot more Work less.</h1>
-        <p class="mb-4">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque rem
-          ratione, cupiditate voluptatem incidunt a dolore quam nobis magni
-          accusantium!
-        </p>
-        <button class="btn btn-primary mb-3 font-weight-bold">
-          30 DAY FREE TRIAL
-        </button>
-        <p class="font-weight-bold">Lorem ipsum dolor sit amet.</p>
-      </div>
+    <div>
+      <h1>Hello World!</h1>
     </div>
 
     <script src="https://cdn.usebootstrap.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
