google fonts added.

--- a/index.html
+++ b/index.html
@@ -3,17 +3,97 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Google font Raleway -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- custom css -->
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon" />
     <title>CRM | Home</title>
+
+    <!-- bootstrap 4.3.1 css -->
     <link
       rel="stylesheet"
       href="https://cdn.usebootstrap.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
   </head>
-  <body>
-    <div>
-      <h1>Hello World!</h1>
+  <body class="py-md-5">
+    <div class="container py-5">
+      <div class="row d-flex align-items-center">
+        <div class="col-md-5">
+          <h2 class="mb-4 text-dark">Tasks in CRM</h2>
+          <p class="pr-md-5 pb-3 pb-md-0 text-secondary">
+            If you have a loyal audience and good taste, we should chat. We’d
+            love to keep you in the loop with first looks at our latest releases
+            and exciting collaborations. Whether you’re a publisher or website
+            in the fashion and lifestyle realm, or a product review platform,
+            join our affiliate program and earn commissions through driving
+            sales on our website. Apply today and let's make some magic happen.
+          </p>
+        </div>
+        <div class="col-md-7">
+          <img
+            class="img-fluid"
+            src="./assets/dashboard.png"
+            alt="dashboard"
+            draggable="false"
+          />
+        </div>
+      </div>
+    </div>
+
+    <div class="container py-5">
+      <div class="row d-flex align-items-center">
+        <div class="col-md-5 order-first order-md-last pl-md-5">
+          <h2 class="mb-4 text-dark">Lead & Contact Management</h2>
+          <p class="pb-3 pb-md-0 text-secondary">
+            If you have a loyal audience and good taste, we should chat. We’d
+            love to keep you in the loop with first looks at our latest releases
+            and exciting collaborations. Whether you’re a publisher or website
+            in the fashion and lifestyle realm, or a product review platform,
+            join our affiliate program and earn commissions through driving
+            sales on our website. Apply today and let's make some magic happen.
+          </p>
+        </div>
+        <div class="col-md-7 order-last order-md-first">
+          <img
+            class="img-fluid"
+            src="./assets/dashboard.png"
+            alt="dashboard"
+            draggable="false"
+          />
+        </div>
+      </div>
+    </div>
+
+    <div class="container py-5">
+      <div class="row d-flex align-items-center">
+        <div class="col-md-5">
+          <h2 class="mb-4 text-dark">Tasks Reports</h2>
+          <p class="pr-md-5 pb-3 pb-md-0 text-secondary">
+            If you have a loyal audience and good taste, we should chat. We’d
+            love to keep you in the loop with first looks at our latest releases
+            and exciting collaborations. Whether you’re a publisher or website
+            in the fashion and lifestyle realm, or a product review platform,
+            join our affiliate program and earn commissions through driving
+            sales on our website. Apply today and let's make some magic happen.
+          </p>
+        </div>
+        <div class="col-md-7">
+          <img
+            class="img-fluid"
+            src="./assets/dashboard-2.png"
+            alt="dashboard"
+            draggable="false"
+          />
+        </div>
+      </div>
     </div>
 
     <script src="https://cdn.usebootstrap.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
