--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
 
-    <!-- custom css -->
-    <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon" />
     <title>CRM | Home</title>
 
@@ -22,16 +20,19 @@
       rel="stylesheet"
       href="https://cdn.usebootstrap.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
+
+    <!-- custom css -->
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body class="py-md-5">
-    <div class="container py-5">
+  <body class="py-md-5 pt-3 pb-5 wrapper">
+    <div class="container-fluid py-md-5 py-3 px-md-5">
       <div class="row d-flex align-items-center">
         <div class="col-md-5">
-          <h2 class="mb-4 text-dark">Tasks in CRM</h2>
+          <h2 class="mb-4 text-dark fw-500">Tasks in CRM</h2>
           <p class="pr-md-5 pb-3 pb-md-0 text-secondary">
             If you have a loyal audience and good taste, we should chat. We’d
             love to keep you in the loop with first looks at our latest releases
-            and exciting collaborations. Whether you’re a publisher or website
+            and exciting collaborations. Whether you're a publisher or website
             in the fashion and lifestyle realm, or a product review platform,
             join our affiliate program and earn commissions through driving
             sales on our website. Apply today and let's make some magic happen.
@@ -39,23 +40,24 @@
         </div>
         <div class="col-md-7">
           <img
-            class="img-fluid"
-            src="./assets/dashboard.png"
+            class="img-fluid rounded-img shadow"
+            src="./assets/dashboard-1.webp"
             alt="dashboard"
             draggable="false"
+            loading="lazy"
           />
         </div>
       </div>
     </div>
 
-    <div class="container py-5">
+    <div class="container-fluid py-md-5 py-3 px-md-5">
       <div class="row d-flex align-items-center">
         <div class="col-md-5 order-first order-md-last pl-md-5">
-          <h2 class="mb-4 text-dark">Lead & Contact Management</h2>
+          <h2 class="mb-4 text-dark fw-500 w-50">Lead & Contact Management</h2>
           <p class="pb-3 pb-md-0 text-secondary">
-            If you have a loyal audience and good taste, we should chat. We’d
+            If you have a loyal audience and good taste, we should chat. We'd
             love to keep you in the loop with first looks at our latest releases
-            and exciting collaborations. Whether you’re a publisher or website
+            and exciting collaborations. Whether you're a publisher or website
             in the fashion and lifestyle realm, or a product review platform,
             join our affiliate program and earn commissions through driving
             sales on our website. Apply today and let's make some magic happen.
@@ -63,23 +65,24 @@
         </div>
         <div class="col-md-7 order-last order-md-first">
           <img
-            class="img-fluid"
-            src="./assets/dashboard.png"
+            class="img-fluid rounded-img shadow"
+            src="./assets/dashboard-2.webp"
             alt="dashboard"
             draggable="false"
+            loading="lazy"
           />
         </div>
       </div>
     </div>
 
-    <div class="container py-5">
+    <div class="container-fluid py-md-5 py-3 px-md-5">
       <div class="row d-flex align-items-center">
         <div class="col-md-5">
-          <h2 class="mb-4 text-dark">Tasks Reports</h2>
+          <h2 class="mb-4 text-dark fw-500">Tasks Reports</h2>
           <p class="pr-md-5 pb-3 pb-md-0 text-secondary">
-            If you have a loyal audience and good taste, we should chat. We’d
+            If you have a loyal audience and good taste, we should chat. We'd
             love to keep you in the loop with first looks at our latest releases
-            and exciting collaborations. Whether you’re a publisher or website
+            and exciting collaborations. Whether you're a publisher or website
             in the fashion and lifestyle realm, or a product review platform,
             join our affiliate program and earn commissions through driving
             sales on our website. Apply today and let's make some magic happen.
@@ -87,15 +90,17 @@
         </div>
         <div class="col-md-7">
           <img
-            class="img-fluid"
-            src="./assets/dashboard-2.png"
+            class="img-fluid rounded-img shadow"
+            src="./assets/dashboard-3.webp"
             alt="dashboard"
             draggable="false"
+            loading="lazy"
           />
         </div>
       </div>
     </div>
 
+    <!-- bootstrap js cdn -->
     <script src="https://cdn.usebootstrap.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.usebootstrap.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
   </body>
