--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <!-- custom css -->
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body class="py-md-5 pt-3 pb-5 wrapper">
     <div class="container-fluid py-md-5 py-3 px-md-5">
       <div class="row d-flex align-items-center">
@@ -53,7 +54,9 @@
     <div class="container-fluid py-md-5 py-3 px-md-5">
       <div class="row d-flex align-items-center">
         <div class="col-md-5 order-first order-md-last pl-md-5">
-          <h2 class="mb-4 text-dark fw-500 w-50">Lead & Contact Management</h2>
+          <h2 class="mb-4 text-dark fw-500 md-w-50">
+            Lead & Contact Management
+          </h2>
           <p class="pb-3 pb-md-0 text-secondary">
             If you have a loyal audience and good taste, we should chat. We'd
             love to keep you in the loop with first looks at our latest releases
