--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       </div>
     </nav>
 
+    <!-- hero -->
     <div
       class="banner d-flex align-items-center justify-content-center vh-100 text-white"
     >
@@ -91,8 +92,57 @@
       </div>
     </div>
 
-    <main class="py-md-5 pt-3 pb-5 wrapper">
-      <div class="container-fluid py-md-5 py-3 px-md-5">
+    <main class="wrapper pb-5">
+      <!-- 3 grid card -->
+      <div class="py-5">
+        <h2 class="mb-4 text-dark font-weight-bolder text-center pt-5">
+          Every Click Towards Productivity
+        </h2>
+
+        <div class="container pb-5">
+          <div class="row">
+            <div
+              class="bg-white p-4 text-center col-md m-3 rounded d-flex align-items-center justify-content-center"
+            >
+              <div>
+                <img src="./assets/monitor.svg" alt="logo" />
+                <h4 class="mt-3">Maximum Efficiency</h4>
+                <p class="mt-3">
+                  Streamline your workflow with automation, integration, and
+                  customizable feature.
+                </p>
+              </div>
+            </div>
+            <div
+              class="bg-white p-4 text-center col-md m-3 rounded d-flex align-items-center justify-content-center"
+            >
+              <div>
+                <img src="./assets/monitor.svg" alt="logo" />
+                <h4 class="mt-3">Maximum Efficiency</h4>
+                <p class="mt-3">
+                  Streamline your workflow with automation, integration, and
+                  customizable feature.
+                </p>
+              </div>
+            </div>
+            <div
+              class="bg-white p-4 text-center col-md m-3 rounded d-flex align-items-center justify-content-center"
+            >
+              <div>
+                <img src="./assets/monitor.svg" alt="logo" />
+                <h4 class="mt-3">Maximum Efficiency</h4>
+                <p class="mt-3">
+                  Streamline your workflow with automation, integration, and
+                  customizable feature.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- dashboard 1 -->
+      <div class="container-fluid p-md-5 mb-5">
         <div class="row d-flex align-items-center">
           <div class="col-md-5">
             <h2 class="mb-4 text-dark fw-500">Tasks in CRM</h2>
@@ -118,7 +168,8 @@
         </div>
       </div>
 
-      <div class="container-fluid py-md-5 py-3 px-md-5">
+      <!-- dashboard 2 -->
+      <div class="container-fluid p-md-5 mb-5">
         <div class="row d-flex align-items-center">
           <div class="col-md-5 order-first order-md-last pl-md-5">
             <h2 class="mb-4 text-dark fw-500">Lead & Contact Management</h2>
@@ -144,18 +195,19 @@
         </div>
       </div>
 
-      <div class="container-fluid py-md-5 py-3 px-md-5">
+      <!-- dashboard 3 -->
+      <div class="container-fluid p-md-5 mb-5">
         <div class="row d-flex align-items-center">
           <div class="col-md-5">
-            <h2 class="mb-4 text-dark fw-500">Tasks Reports</h2>
+            <h2 class="mb-4 text-dark fw-500">Clients</h2>
             <p class="pr-md-5 pb-3 pb-md-0 text-secondary">
-              If you have a loyal audience and good taste, we should chat. We'd
-              love to keep you in the loop with first looks at our latest
-              releases and exciting collaborations. Whether you're a publisher
-              or website in the fashion and lifestyle realm, or a product review
-              platform, join our affiliate program and earn commissions through
-              driving sales on our website. Apply today and let's make some
-              magic happen.
+              Within our customer segment, we utilize advanced CRM tools to
+              carefully monitor the journey of each client. Through detailed
+              management of leads and contacts, we remain vigilant of every
+              engagement, guaranteeing no chance is overlooked. Our system
+              empowers us to track sales progression, pinpoint follow-up
+              requirements, and ultimately prioritize customer contentment by
+              promptly addressing their needs.
             </p>
           </div>
           <div class="col-md-7">
@@ -166,6 +218,143 @@
               draggable="false"
               loading="lazy"
             />
+          </div>
+        </div>
+      </div>
+
+      <!-- dashboard 4 -->
+      <div class="container-fluid p-md-5 mb-5">
+        <div class="row d-flex align-items-center">
+          <div class="col-md-5 order-first order-md-last pl-md-5">
+            <h2 class="mb-4 text-dark fw-500">Events</h2>
+            <p class="pb-3 pb-md-0 text-secondary">
+              Assign tasks for yourself or your team, ranging from crucial
+              meetings to minor tasks, within Shootcount. Benefit from timely
+              reminders provided by Shootcount to ensure you're adequately
+              prepared for upcoming events. Set reminders to accomplish minor
+              tasks or follow up on leads, ensuring nothing falls through the
+              cracks and maximizing productivity.
+            </p>
+          </div>
+          <div class="col-md-7 order-last order-md-first">
+            <img
+              class="img-fluid rounded-img shadow"
+              src="./assets/dashboard-2.webp"
+              alt="dashboard"
+              draggable="false"
+              loading="lazy"
+            />
+          </div>
+        </div>
+      </div>
+
+      <!-- dashboard 5 -->
+      <div class="container-fluid p-md-5 mb-5">
+        <div class="row d-flex align-items-center">
+          <div class="col-md-5">
+            <h2 class="mb-4 text-dark fw-500">HR Checking</h2>
+            <p class="pr-md-5 pb-3 pb-md-0 text-secondary">
+              Within our HR department, we employ Shootcount's task management
+              functionalities to effectively coordinate and monitor diverse
+              tasks. From arranging significant meetings to guaranteeing
+              punctual completion of minor assignments, Shootcount's reminders
+              ensure team members stay informed and ready. Whether it involves
+              pursuing leads or managing everyday HR tasks, Shootcount
+              facilitates the streamlining of our operations, preventing
+              oversights and fostering efficient teamwork.
+            </p>
+          </div>
+          <div class="col-md-7">
+            <img
+              class="img-fluid rounded-img shadow"
+              src="./assets/dashboard-3.webp"
+              alt="dashboard"
+              draggable="false"
+              loading="lazy"
+            />
+          </div>
+        </div>
+      </div>
+
+      <!-- dashboard 6 -->
+      <div class="container-fluid p-md-5 mb-5">
+        <div class="row d-flex align-items-center">
+          <div class="col-md-5 order-first order-md-last pl-md-5">
+            <h2 class="mb-4 text-dark fw-500">Finance</h2>
+            <p class="pb-3 pb-md-0 text-secondary">
+              Within our finance department, we utilize Shootcount's task
+              management tools to uphold a systematic approach to financial
+              activities. From arranging critical financial meetings to ensuring
+              prompt completion of minor tasks, Shootcount's reminders are
+              integral in guiding the team effectively. Whether it involves
+              overseeing invoicing, monitoring expenses, or pursuing financial
+              leads, Shootcount streamlines our financial workflows,
+              guaranteeing precision, effectiveness, and timely task
+              fulfillment.
+            </p>
+          </div>
+          <div class="col-md-7 order-last order-md-first">
+            <img
+              class="img-fluid rounded-img shadow"
+              src="./assets/dashboard-2.webp"
+              alt="dashboard"
+              draggable="false"
+              loading="lazy"
+            />
+          </div>
+        </div>
+      </div>
+
+      <!-- dashboard 7 -->
+      <div class="container-fluid p-md-5 mb-5">
+        <div class="row d-flex align-items-center">
+          <div class="col-md-5">
+            <h2 class="mb-4 text-dark fw-500">Tasks Reports</h2>
+            <p class="pr-md-5 pb-3 pb-md-0 text-secondary">
+              Once integrated, Shootcount promptly analyzes your sales and
+              financial data, providing multiple reports detailing the
+              effectiveness of each stage in your sales funnel. Gain insights
+              into areas where prospects are lost and identify opportunities for
+              improvement within your team.
+            </p>
+          </div>
+          <div class="col-md-7">
+            <img
+              class="img-fluid rounded-img shadow"
+              src="./assets/dashboard-3.webp"
+              alt="dashboard"
+              draggable="false"
+              loading="lazy"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div class="bg-white my-5 py-md-5">
+        <div class="container py-5 mb-5">
+          <div class="row d-flex align-items-center">
+            <div class="col-md">
+              <h2 class="mb-4 text-dark font-weight-bolder">
+                Every Click Towards Productivity
+              </h2>
+              <p class="pr-md-5 pb-3 pb-md-0 text-secondary">
+                Efficient planning is crucial for a successful photoshoot. This
+                involves scheduling, location scouting, shot list creation, and
+                gathering necessary props or equipment.
+              </p>
+              <button class="btn btn-success btn-lg mb-3 font-weight-bold">
+                Get Started
+              </button>
+            </div>
+            <div class="col-md">
+              <img
+                class="img-fluid rounded-img shadow mx-auto d-block"
+                src="./assets/image-1.png"
+                alt="Analytics"
+                draggable="false"
+                loading="lazy"
+              />
+            </div>
           </div>
         </div>
       </div>
