feat: icon updated.

--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
               class="bg-white p-4 text-center col-md m-3 rounded d-flex align-items-center justify-content-center"
             >
               <div>
-                <img src="./assets/monitor.svg" alt="logo" />
-                <h4 class="mt-3">Maximum Efficiency</h4>
+                <img src="./assets/security-safe.svg" alt="logo" />
+                <h4 class="mt-3">Data Security</h4>
                 <p class="mt-3">
-                  Streamline your workflow with automation, integration, and
-                  customizable feature.
+                  Fortify your data fortress with encryption, access control,
+                  and backups.
                 </p>
               </div>
             </div>
@@ -129,11 +129,11 @@
               class="bg-white p-4 text-center col-md m-3 rounded d-flex align-items-center justify-content-center"
             >
               <div>
-                <img src="./assets/monitor.svg" alt="logo" />
-                <h4 class="mt-3">Maximum Efficiency</h4>
+                <img src="./assets/document-text.svg" alt="logo" />
+                <h4 class="mt-3">Easy to Manage</h4>
                 <p class="mt-3">
-                  Streamline your workflow with automation, integration, and
-                  customizable feature.
+                  Seamlessly manage tasks with deadlines, assignments and
+                  progress tracking.
                 </p>
               </div>
             </div>
