feat: font updated.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Google font Raleway -->
+    <!-- Google font Rubik -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
 
@@ -77,11 +77,11 @@
       class="banner d-flex align-items-center justify-content-center vh-100 text-white"
     >
       <div class="text-center">
-        <h1 class="mb-4 display-3 font-weight-bold">
+        <h1 class="mb-4 font-weight-bold display-3">
           <span class="text-success">Shoot</span> More
           <span class="text-success">Manage</span> Smart
         </h1>
-        <p class="mb-4 w-50 mx-auto font-weight-bold">
+        <p class="mb-4 w-75 mx-auto">
           Manage your day-to-day Photography operation with great efficiency.
           Take advantage of our FREE CRM specially designed for Photographers
           and Studios.
@@ -333,22 +333,33 @@
       <div class="bg-white my-5 py-md-5">
         <div class="container py-5 mb-5">
           <div class="row d-flex align-items-center">
-            <div class="col-md">
+            <div class="col-md-8">
               <h2 class="mb-4 text-dark font-weight-bolder">
-                Every Click Towards Productivity
+                Every Pixel Matters
               </h2>
               <p class="pr-md-5 pb-3 pb-md-0 text-secondary">
-                Efficient planning is crucial for a successful photoshoot. This
-                involves scheduling, location scouting, shot list creation, and
-                gathering necessary props or equipment.
+                bZm Graphics Ltd. is a Visual Content Retouching Company for
+                E-commerce, Studios and Brands with 250+ expert Photo Retouchers
+                and Video Editors supporting leading E-commerce, Brands,
+                Retailers and Photo Studios Globally since 2015.
               </p>
-              <button class="btn btn-success btn-lg mb-3 font-weight-bold">
+              <p class="pr-md-5 pb-3 pb-md-0 text-secondary">
+                bZm Graphics is also a trustworthy name for Photo
+                Post-Production and Product Video Editing in most industries
+                including FMCG, Automotive, Fashion and Advertising.
+              </p>
+
+              <a
+                class="btn btn-success text-white btn-lg mb-3 font-weight-bold"
+                href="https://www.bzmgraphics.com"
+                target="_blank"
+              >
                 Get Started
-              </button>
+              </a>
             </div>
-            <div class="col-md">
+            <div class="col-md-4">
               <img
-                class="img-fluid rounded-img shadow mx-auto d-block"
+                class="img-fluid rounded-img mx-auto d-block"
                 src="./assets/image-1.png"
                 alt="Analytics"
                 draggable="false"
